--- a/amenities.html
+++ b/amenities.html
@@ -37,14 +37,11 @@
 <main>
     <section id="kegiatan" class="kegiatan">
         <h2>Fasilitas</h2>
-        <p>RP HOTEL Memiliki Beberapa Fasilitas. Berikut adalah beberapa Fasilitas RP HOTEL:</p>
-        <ul>
-            <section id="gallery" class="gallery">
+                    <section id="gallery" class="gallery">
                 <div class="container">
                     <h2>Fasilitas</h2>
                     <div class="gallery-images">
-                        <img src="kolam.jpg" alt="Kolam Renang RP HOTEL">
-                        <figcaption>Kolam Renang RP HOTEL</figcaption>
+                        <img src="kolam.jpg" alt=
                     </figure>
                     <figure>
                         <img src="spa.jpeg" alt="SPA RP HOTEL">
